force-app/main/default/objects/order_item__c/order_item__c.object-meta.xml
<CustomObject>
    <label>order item</label>
    <nameField>
        <label>id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>order item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>