force-app/main/default/objects/order_item__c/fields/created_date__c.field-meta.xml
<CustomField>
    <fullName>created_date__c</fullName>
    <label>created_date</label>
    <length>15</length>
    <type>Text</type>
</CustomField>