force-app/main/default/objects/order_item__c/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>order</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>order item</relationshipLabel>
    <relationshipName>order_item</relationshipName>
    <type>Lookup</type>
</CustomField>