force-app/main/default/objects/order_item__c/fields/qty__c.field-meta.xml
<CustomField>
    <fullName>qty__c</fullName>
    <label>qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>