force-app/main/default/objects/order_item__c/fields/reference_number__c.field-meta.xml
<CustomField>
    <fullName>reference_number__c</fullName>
    <label>reference number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>