force-app/main/default/objects/order_item__c/fields/updated_date__c.field-meta.xml
<CustomField>
    <fullName>updated_date__c</fullName>
    <label>updated_date</label>
    <length>15</length>
    <type>Text</type>
</CustomField>