force-app/main/default/objects/order_item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>reference_number__c</columns>
    <columns>order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>